# IngenieriaWeb-Grupo11

./: .dockerignore  .gitignore  CLOUDINARY_SETUP.md  Dockerfile  README.md  build.sh  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  robots.txt  run.sh  tatus
config/: settings.py  urls.py
core/: admin.py  context_processors.py  forms.py  mail_service.py  models.py  search_indexes.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_comedor_imagen.py  0003_userprofile.py  0004_userprofile_email_verification_code.py  0005_pendingregistration_and_more.py  0006_delete_pendingregistration.py  0007_publicacion_publicacionarticulo.py  0007_tipopublicacion_publicacion_donacion_donacionitem_and_more.py  0008_alter_favoritos_fecha_alta.py  0008_favoritos.py  0009_comedor_usuario.py  0009_tipodonacion_donacion.py  0010_donacion_telefono.py  0010_tipopublicacion_remove_publicacion_tipo_donacion_and_more.py
static/css/: custom.css
static/js/: counters.js  custom.js  darkMode.js  main.js  messages.js  mobileMenu.js  publicaciones.js  stats.js  visualEffects.js
templates/core/: agregar_favorito.html  agregar_publicacion.html  base.html  confirmar_eliminar_donacion.html  confirmar_eliminar_favorito.html  confirmar_eliminar_publicacion.html  crear_comedor.html  crear_donacion.html  crear_publicacion.html  detalle_comedor.html  detalle_publicacion.html  editar_donacion.html  editar_publicacion.html  home.html  listar_comedores.html  listar_donaciones.html  listar_favoritos.html  (+3 more)
whoosh_index/: _MAIN_0.toc
(+9 files in other folders)
